# GoDocs

backend/: config.py  pyproject.toml
backend/application/: __init__.py  models.py  routes.py
front/: package-lock.json  package.json
front/src/: App.js  debounce.js  index.js  service.js
front/src/components/: DocumentComponent.js  DocumentStyles.js  Home.js  LoginComponent.js  Navigation.js  RegisterComponent.js  UpdateDocumentComponent.js
